# ms_keychain_gamer

./: .gitignore  .gitmodules  CMakeLists.txt
boards/Stm32_Black_Pill/: Stm32_Black_Pill.cmake  board.cpp  board.hpp  config.cpp  linker_script.ld
boards/Stm32_Black_Pill/device_tree/: configure_device_tree.cmake  device_tree.json
boards/Stm32_F429_Discovery/: Stm32_F429_Discovery.cmake  board.cpp  linker_script.ld
boards/Stm32_F429_Discovery/device_tree/: configure_device_tree.cmake
boards/keychain_gamer/: board.hpp  keychain_gamer.cmake
boards/keychain_gamer_prototype/: board.hpp  keychain_gamer_prototype.cmake
boards/x86_linux/: board.cpp  board.hpp  config.cpp  config.hpp  x86_linux.cmake
boards/x86_linux/device_tree/: device_tree.json
cmake/: GitModules.cmake
scripts/: generate_image.py
simulators/: CMakeLists.txt
simulators/keychain_gamer/: CMakeLists.txt  simulation.cpp
src/: CMakeLists.txt  main.cpp
src/assets/: selected_item.pxo
src/drivers/: CMakeLists.txt  gamepad_driver.cpp  gamepad_driver.hpp  gamepad_file.cpp  gamepad_file.hpp
src/drivers/gamepad/: CMakeLists.txt  event.hpp  gamepad_driver.cpp  gamepad_driver.hpp  gamepad_file.cpp  gamepad_file.hpp
src/drivers/linux_audio/: CMakeLists.txt  linux_audio.cpp  linux_audio.hpp  linux_audio_file.cpp  linux_audio_file.hpp
src/drivers/sfml_simulator/: CMakeLists.txt  keyboard_driver.cpp  keyboard_driver.hpp  keyboard_driver_file.cpp  keyboard_driver_file.hpp  sfml_simulator.cpp  sfml_simulator.hpp  sfml_simulator_file.cpp  sfml_simulator_file.hpp
src/games/: CMakeLists.txt
src/games/space_invaders/: CMakeLists.txt  bullet.cpp  bullet.hpp  game.cpp  game.hpp  main.cpp  main_menu.cpp  main_menu.hpp  monster1.hpp  monster_base.hpp  monster_line.hpp  monsters.cpp  monsters.hpp  object.hpp  player.cpp  player.hpp
src/games/space_invaders/assets/: CMakeLists.txt  icon.pxo  live.pxo  main_menu.pxo  main_menu_monster.hpp  main_menu_press_key.hpp  main_menu_title.hpp
src/games/synth/: CMakeLists.txt  main.cpp  sound_generator.hpp
src/games/synth/lib/: CMakeLists.txt  channel.cpp  channel.hpp  envelope.cpp  envelope.hpp  instrument.hpp  note.cpp  note.hpp  note_frequency.cpp  note_frequency.hpp
src/games/synth/lib/instruments/: bell.cpp  bell.hpp
src/games/synth/lib/oscillators/: oscillator.hpp  sine.cpp  sine.hpp
src/io/: CMakeLists.txt  button_reader.cpp  button_reader.hpp  display.cpp  display.hpp  framebuffer.cpp  framebuffer.hpp  gamepad.cpp  gamepad.hpp
test/ut/: CMakeLists.txt
test/ut/synthlib/: CMakeLists.txt  envelope_tests.cpp
