# This file is part of MS keychain gamer project.
# Copyright (C) 2020 Mateusz Stadnik
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

add_library(gamer_io)

target_sources(gamer_io
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}/button_reader.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/display.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/framebuffer.hpp
        ${CMAKE_CURRENT_SOURCE_DIR}/gamepad.hpp

    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/button_reader.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/display.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/framebuffer.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/gamepad.cpp
)

target_include_directories(gamer_io
    PUBLIC
        ${PROJECT_SOURCE_DIR}/src
)

target_compile_options(gamer_io
    PUBLIC
        $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a>
        $<$<CONFIG:DEBUG>:-Og -g>
        $<$<CONFIG:RELEASE>:-Os>
    PRIVATE
        $<$<COMPILE_LANGUAGE:CXX>:-Werror -Wall -Wextra -Wpedantic -Wcast-align -Wunused -Wshadow -Wpointer-arith -Wcast-qual -Wno-missing-braces>
)

target_link_libraries(gamer_io
    PRIVATE
        hal_flags
        msgui
)
